Added Icon; changed theme by Style.xml and Made few string localize in string.xml for different languages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My java first app</string>
+    <string name="Name">Name</string>
+    <string name="thank_you">Thank You!!!!</string>
 </resources>
